--- a/src/components/mobile-footer/mobile-footer.pug
+++ b/src/components/mobile-footer/mobile-footer.pug
@@ -11,7 +11,7 @@ mixin mobile-footer()
   footer.mobile-footer
     .mobile-footer__logo
       +logo("text")
-    p.mobile-footer__copyright Copyright © 2018 Toxin отель. Все права зачищены.
+    p.mobile-footer__copyright Copyright © 2018 Toxin отель. Все права защищены.
     .mobile-footer__social
       each link in socialLinks
         +social-link(link)
