change px to rem #7

--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -44,7 +44,7 @@
 
   &__label {
     text-anchor: middle;
-    font-size: 3px;
+    font-size: 0.188rem;
     line-height: 15px;
     text-transform: uppercase;
     transform: translateY(5px);
