--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -57,4 +57,8 @@
 .checkbox__text_rich {
   display: flex;
   flex-direction: column;
+  &__text_rich {
+    display: flex;
+    flex-direction: column;
+  }
 }
