--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -1,15 +1,10 @@
 .checkbox {
   display: flex;
-  flex-direction: column;
+  align-items: flex-start;
   max-width: max-content;
-  padding-left: 30px;
   line-height: 1.2;
   cursor: pointer;
   @extend %body-text;
-
-  &:not(:last-child) {
-    margin-bottom: 15px;
-  }
 
   &__input {
     position: absolute;
@@ -27,17 +22,17 @@
   }
 
   &__box {
-    position: absolute;
     width: 20px;
+    min-width: 20px;
     height: 20px;
-    margin-top: -2px;
-    margin-left: -30px;
+    min-height: 20px;
+    margin-right: 10px;
     border-radius: 4px;
     box-shadow: 0 0 0 1px $dark-shade-25;
   }
 
   &__title {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     font-weight: $boldFontWeight;
     font-size: $mainFontSize;
     font-family: $mainFont;
@@ -52,11 +47,7 @@
     font-style: normal;
     line-height: 1.1;
   }
-}
 
-.checkbox__text_rich {
-  display: flex;
-  flex-direction: column;
   &__text_rich {
     display: flex;
     flex-direction: column;
