--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -1,4 +1,4 @@
-mixin bullet-list(arr)
-  ul.bullet
-    each val in arr
-      li.bullet__items=val
+mixin bullet-list(items)
+  ul.bullet-list
+    each item in items
+      li.bullet-list__items=item
