--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -51,6 +51,12 @@
     &:nth-child(5) {
       max-width: 260px;
     }
+
+    &-wrapper {
+      display: flex;
+      flex-direction: column;
+      row-gap: 15px;
+    }
   }
 
   &__comfort {
