change var to const #6

--- a/src/components/color-example/color-example.pug
+++ b/src/components/color-example/color-example.pug
@@ -1,6 +1,6 @@
 mixin color-exampmle({ code, color})
   -
-    var classes = {
+    const classes = {
       "Dark Shade 100%": "color-example_dark_100",
       "Dark Shade 75%": "color-example_dark_75",
       "Dark Shade 50%": "color-example_dark_50",
