--- a/src/components/mobile-footer/mobile-footer.pug
+++ b/src/components/mobile-footer/mobile-footer.pug
@@ -3,7 +3,7 @@ include /components/social-link/social-link
 
 mixin mobile-footer()
   -
-    var socialLinks = [
+    const socialLinks = [
       { link: 'https://twitter.com/toxin', img: 'twitter' },
       { link: 'https://facebook.com/toxin', img: 'facebook' },
       { link: 'https://instagram.com/toxin', img: 'instagram' }
