--- a/src/components/review/review.pug
+++ b/src/components/review/review.pug
@@ -1,6 +1,6 @@
 include /components/button-like/button-like
 mixin review(obj)
-  -var {src, name, time, comment, likes, liked} = obj
+  -const {src, name, time, comment, likes, liked} = obj
   .review.js-review
     img(class="review__img", src=src, alt="ava")
     span.review__name
