--- a/src/components/room-card/room-card.pug
+++ b/src/components/room-card/room-card.pug
@@ -1,6 +1,6 @@
 include /components/rate-button/rate-button
 mixin room-card(obj)
-  -var {luxury, price, number, star, reviews, images} = obj
+  -const {luxury, price, number, star, reviews, images} = obj
   .room-card.js-room-card
     .room-card__slider
       .room-card__slider-slides
