--- a/src/components/type-example/type-example.pug
+++ b/src/components/type-example/type-example.pug
@@ -1,6 +1,6 @@
 mixin type-example({ tag, text })
   -
-    var classes = {
+    const classes = {
       "H1": "type-example__text_xl",
       "H2": "type-example__text_l",
       "H3": "type-example__text_m",
