--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -7,7 +7,7 @@ include /components/login-form/login-form
 include /components/room-card/room-card
 include /components/logo/logo
 block variables
-  -var title= "Cards"
+  -const title= "Cards"
 
 block content
   .content_card
