--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -18,9 +18,10 @@ include /components/button/button
 include /components/logo/logo
 
 block variables
-  -var title = "Form Elements"
   -
-    var review = {
+    const title = "Form Elements"
+
+    const review = {
       name: 'Мурад Сарафанов',
       src: require('/src/assets/img/review/4el.jpg'),
       time: '5 дней назад',
@@ -28,14 +29,14 @@ block variables
       liked: true,
       comment: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'
     }
-  -
-    var checkboxList = [
+
+    const checkboxList = [
       { label: 'Завтрак' }, { label: 'Письменный стол', checked: true },
       { label: 'Стул для кормления', checked: true }, { label: 'Кроватка', checked: true },
       { label: 'Телевизор' }, { label: 'Шампунь' }
     ]
-  -
-    var aboutRoomItems = [
+
+    const aboutRoomItems = [
       {src: require("/src/assets/img/icons/insert-emoticon.svg"), title: "Комфорт", text: "Шумопоглощающие стены"},
       {src: require("/src/assets/img/icons/location-city.svg"), title: "Удобство", text: "Окно в каждой из спален"},
     ]
@@ -88,8 +89,8 @@ block content
           .form-elements__block.form-elements__block_margin_xl
             h3.form-elements__title like button
             .form-elements__button-like
-              +button-like(2)(class="button-like__inner")
-              +button-like(12)(class="button-like_active")
+              +button-like(2)
+              +button-like(12, "liked")
           .form-elements__block.form-elements__block_margin_l
             h3.form-elements__title Rate button
             .form-elements__rate
