--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -1,7 +1,7 @@
 extends /layouts/main
 include /components/registration-form/registration-form
 block variables
-  -var title = "Регистрация"
+  -const title = "Регистрация"
 block content
   .registration
     .registration__registration-form
