--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -1,7 +1,7 @@
 extends /layouts/main
 include /components/login-form/login-form
 block variables
-  -var title = "Вход"
+  -const title = "Вход"
 block content
   .login
     .login__login-form
