--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -3,10 +3,10 @@ include /components/subscription-field/subscription-field
 include /components/social-link/social-link
 mixin footer()
   -
-    var navigationLinks = ['О нас', 'Новости', 'Служба поддержки', 'Услуги']
-    var aboutUsLinks = ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы']
-    var supportLinks = ['Соглашения', 'Сообщества', 'Связь с нами']
-    var socialLinks = [
+    const navigationLinks = ['О нас', 'Новости', 'Служба поддержки', 'Услуги']
+    const aboutUsLinks = ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы']
+    const supportLinks = ['Соглашения', 'Сообщества', 'Связь с нами']
+    const socialLinks = [
       { link: 'https://twitter.com/toxin', img: 'twitter'},
       { link: 'https://facebook.com/toxin', img: 'facebook'},
       { link: 'https://instagram.com/toxin', img: 'instagram'}
