--- a/src/pages/colors-types/colors-types.pug
+++ b/src/pages/colors-types/colors-types.pug
@@ -3,9 +3,10 @@ include /components/logo/logo
 include /components/color-example/color-example
 include /components/type-example/type-example
 block variables
-  -var title= "Colors & Types"
   -
-    var colors = [
+    const title= "Colors & Types"
+
+    const colors = [
       {color: "Dark Shade 100%", code: "#1F2041"},
       {color: "Dark Shade 75%", code: "#1F2041"},
       {color: "Dark Shade 50%", code: "#1F2041"},
@@ -14,8 +15,8 @@ block variables
       {color: "Purple", code: "#BC9CFF"},
       {color: "Green", code: "#6FCF97"},
     ]
-  -
-    var types = [
+
+    const types = [
       {tag: "H1", text: "This one is the sub-section or widget title"},
       {tag: "H2", text: "Next one is the item title inside widgets"},
       {tag: "H3", text: "This is a label or CTA text"},
