--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -4,7 +4,7 @@ include /components/footer/footer
 include /components/mobile-footer/mobile-footer
 include /components/logo/logo
 block variables
-  -var title = "headers & footers"
+  -const title = "headers & footers"
 block content
   .headers-footers
     header.headers-footers__header
