--- a/src/pages/landing-page/landing-page.pug
+++ b/src/pages/landing-page/landing-page.pug
@@ -1,7 +1,7 @@
 extends /layouts/main
 include /components/search-form/search-form
 block variables
-  -var title = "Toxin - Главная"
+  -const title = "Toxin - Главная"
 block content
   .landing-page
     .landing-page__search-form
