--- a/src/components/toggle/toggle.pug
+++ b/src/components/toggle/toggle.pug
@@ -1,5 +1,5 @@
 mixin toggle(text)
-  label.toggle(class=attributes.class)
+  label.toggle
     input(class="toggle__button" type="checkbox" checked=attributes.checked)
     span.toggle__slider
     =text
