--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -5,14 +5,15 @@ include /components/bullet-list/bullet-list
 include /components/review/review
 include /components/chart/chart
 block variables
-  -var title= "Информация о номере"
   -
-    var reviews = [
+    const title= "Информация о номере"
+
+    const reviews = [
       {name: "Рулон Обоев", src: require("/src/assets/img/review/4el.jpg"), time: "5 дней назад", likes: "12", liked: true, comment: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."},
       {name: "Патрисия Стёклышкова", src: require("/src/assets/img/review/tetka.jpg"), time: "Неделю назад", likes: "2", comment: "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент"}
     ]
-  -
-    var aboutRoomItems = [
+
+    const aboutRoomItems = [
       {src: require("/src/assets/img/icons/insert-emoticon.svg"), title: "Комфорт", text: "Шумопоглощающие стены"},
       {src: require("/src/assets/img/icons/location-city.svg"), title: "Удобство", text: "Окно в каждой из спален"},
       {src: require("/src/assets/img/icons/whatshot.svg"), title: "Уют", text: "Номер оснащён камином"}
@@ -20,12 +21,12 @@ block variables
 block content
   .room-details
     .room-details__pictures
-      .room-details__picture
-        img(src=require("/src/assets/img/room-details-picture/image-1.jpg"), alt="room picture")
-      .room-details__picture
-        img(src=require("/src/assets/img/room-details-picture/image-2.jpg"), alt="room picture")
-      .room-details__picture
-        img(src=require("/src/assets/img/room-details-picture/image-3.jpg"), alt="room picture")
+      .room-details__picture-container
+        img(class="room-details__picture" src=require("/src/assets/img/room-details-picture/image-1.jpg"), alt="room picture")
+      .room-details__picture-container
+        img(class="room-details__picture" src=require("/src/assets/img/room-details-picture/image-2.jpg"), alt="room picture")
+      .room-details__picture-container
+        img(class="room-details__picture" src=require("/src/assets/img/room-details-picture/image-3.jpg"), alt="room picture")
     .room-details__container
       .room-details__info
         .room-details__about-room
