--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -23,14 +23,14 @@
     }
   }
 
-  &__picture img {
+  &__picture {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
 
-  &__picture:nth-child(1n) {
+  &__picture-container:nth-child(1n) {
     grid-row: 1 / 3;
     grid-column: 1 / 3;
 
@@ -40,7 +40,7 @@
     }
   }
 
-  &__picture:nth-child(2n) {
+  &__picture-container:nth-child(2n) {
     grid-row: 1 / 2;
     grid-column: 3 / 4;
 
@@ -50,7 +50,7 @@
     }
   }
 
-  &__picture:nth-child(3n) {
+  &__picture-container:nth-child(3n) {
     grid-row: 2 / 3;
     grid-column: 3 / 4;
 
