--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -20,7 +20,7 @@
     max-width: 320px;
   }
 
-  &__button {
+  &__expand-button {
     position: absolute;
     right: 0;
     width: 44px;
@@ -68,7 +68,7 @@
   --adp-background-color-in-range: rgba(188, 156, 255, 0.25);
   --adp-background-color-in-range-focused: rgba(188, 156, 255, 0.25);
   --adp-color: rgba(31, 32, 65, 0.5);
-  --adp-color-disabled: rgba(31, 32, 65, 0.5);
+  --adp-color-disabled: rgba(31, 32, 65, 0.3);
   --adp-color-other-month: rgba(31, 32, 65, 0.25);
   --adp-color-other-month-hover: #ffffff;
   --adp-btn-color: #bc9cff;
