--- a/src/components/button-like/button-like.pug
+++ b/src/components/button-like/button-like.pug
@@ -1,2 +1,2 @@
 mixin button-like(number, active)
-  button.button-like.js-button-like(class=active && 'button-like_active')= number
+  button.button-like.js-button-like(class=active && "button-like_active")= number
