--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -4,5 +4,5 @@ block variables
   -const title = "Регистрация"
 block content
   .registration
-    .registration__registration-form
+    .registration__form
       +registration-form()
