--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -14,32 +14,32 @@ mixin footer()
   footer.footer
     .footer__container
       .footer__wrapper
-        .footer__column3
+        .footer__column.footer__column_size_m
           .footer__logo
             +logo("text")
           p.footer__description
             |Бронирование номеров в лучшем отеле 2019 года
             |по версии ассоциации «Отельные взгляды»
-        .footer__column2
+        .footer__column.footer__column_size_s
           .footer__navigation
             h3.footer__title навигация
             ul.footer__list
               each link in navigationLinks
                 li.footer__list-item
                   a(class="footer__link" href="/mock-address")= link
-        .footer__column2
+        .footer__column.footer__column_size_s
           h3.footer__title о нас
           ul.footer__list
             each link in aboutUsLinks
               li.footer__list-item
                 a(class="footer__link" href="/mock-address")= link
-        .footer__column2
+        .footer__column.footer__column_size_s
             h3.footer__title Служба поддержки
             ul.footer__list
               each link in supportLinks
                 li.footer__list-item
                   a(class="footer__link" href="/mock-address")= link
-        .footer__column3
+        .footer__column.footer__column_size_m
           h3.footer__title Подписка
           p(class="footer__subscribe") Получайте специальные предложения и новости сервиса
           +subscription-field()
