--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -23,7 +23,7 @@ mixin header(login)
             if login
               a(class="header__user-name" href="/mock-address") Юлий Цезарь
             else
-              .header-buttons
+              .header__buttons
                 +button({"color": "white", "tag": "a", "href": "/sign-in.html", "text": "войти", 'size': 's'})
                 +button({"color": "blue", "tag": "a", "href": "/registration.html", "text": "зарегистрироваться", 'size': 's'})
         button(class="header__burger js-header__burger")
