--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -10,7 +10,7 @@
     padding: 0 10px;
   }
 
-  &__registration-form {
+  &__form {
     width: 100%;
     max-width: 380px;
     margin: 10px auto;
