fix bem naming #1

--- a/src/components/chart/chart.pug
+++ b/src/components/chart/chart.pug
@@ -1,6 +1,6 @@
 mixin chart()
-  .chart__wrapper.js-chart-wrapper
-    svg(class="chart" width="122" height="122" viewBox="0 0 34 34")
+  .chart.js-chart
+    svg(class="chart__units" width="122" height="122" viewBox="0 0 34 34")
       circle(class="chart__unit js-chart__unit" r="15.9" cx="50%" cy="50%")
       circle(class="chart__unit js-chart__unit" r="15.9" cx="50%" cy="50%")
       circle(class="chart__unit js-chart__unit" r="15.9" cx="50%" cy="50%")
