--- a/src/components/color-example/color-example.pug
+++ b/src/components/color-example/color-example.pug
@@ -1,13 +1,13 @@
 mixin color-exampmle({ code, color})
   -
     const classes = {
-      "Dark Shade 100%": "color-example_dark_100",
-      "Dark Shade 75%": "color-example_dark_75",
-      "Dark Shade 50%": "color-example_dark_50",
-      "Dark Shade 25%": "color-example_dark_25",
-      "Dark Shade 5%": "color-example_dark_5",
-      "Purple": "color-example_purple",
-      "Green": "color-example_green",
+      "Dark Shade 100%": "color-example_color_dark-100",
+      "Dark Shade 75%": "color-example_color_dark-75",
+      "Dark Shade 50%": "color-example_color_dark-50",
+      "Dark Shade 25%": "color-example_color_dark-25",
+      "Dark Shade 5%": "color-example_color_dark-5",
+      "Purple": "color-example_color_purple",
+      "Green": "color-example_color_green",
     }
   .color-example
     .color-example__preview(class=`${classes[color]}`)
